--- a/esports-website/index.html
+++ b/esports-website/index.html
@@ -32,7 +32,7 @@
     <section class="hero" id="home">
       <video class="hero-bg-video" autoplay muted loop playsinline>
         <source
-          src="/media/Cyberpunk 2077 - RTX 4090 Ultra Settings (4K + Raytracing).mp4"
+          src="media/Cyberpunk 2077 - RTX 4090 Ultra Settings (4K + Raytracing).mp4"
           type="video/mp4"
         />
         Your browser does not support the video tag.
@@ -188,7 +188,7 @@
       <div class="team-grid">
         <div class="team-card">
           <img
-            src="/media/PHOTO-2025-10-13-16-11-08.jpg"
+            src="media/PHOTO-2025-10-13-16-11-08.jpg"
             alt="Team Member"
             class="team-avatar"
           />
@@ -197,7 +197,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/media/binayak.jpg"
+            src="media/binayak.jpg"
             alt="Team Member"
             class="team-avatar"
           />
@@ -206,7 +206,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/media/PHOTO-2025-10-13-16-08-09.jpg"
+            src="media/PHOTO-2025-10-13-16-08-09.jpg"
             alt="Team Member"
             class="team-avatar"
           />
@@ -215,7 +215,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/media/PHOTO-2025-10-13-16-11-51.jpg"
+            src="media/PHOTO-2025-10-13-16-11-51.jpg"
             alt="Team Member"
             class="team-avatar"
           />
@@ -224,7 +224,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/media/PHOTO-2025-10-13-16-07-10.jpg"
+            src="media/PHOTO-2025-10-13-16-07-10.jpg"
             alt="Team Member"
             class="team-avatar"
           />
