--- a/index.html
+++ b/index.html
@@ -4,47 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple Projects</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 40px;
-      text-align: center;
-    }
-    h1 {
-      margin-bottom: 30px;
-    }
-    .project-list {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      max-width: 400px;
-      margin: auto;
-    }
-    a {
-      display: block;
-      padding: 15px;
-      background: white;
-      border-radius: 10px;
-      text-decoration: none;
-      color: #000;
-      font-size: 18px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: 0.2s ease;
-    }
-    a:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.15);
-    }
-  </style>
+  <link rel="stylesheet" href="main-style.css">
 </head>
 <body>
-  <h1>Simple Projects</h1>
 
-  <div class="project-list">
-    <a href="drumkit/">Drumkit</a>
-    <a href="esports-website/">Esports Website</a>
-    <a href="golf-website/">Golf Website</a>
+  <header>
+    <h1>Simple Projects</h1>
+    <p class="subtitle">A collection of beginner-friendly web apps</p>
+  </header>
+
+  <div class="projects-container">
+    <a href="drumkit/" class="project-card">🥁 Drumkit</a>
+    <a href="esports-website/" class="project-card">🎮 Esports Website</a>
+    <a href="golf-website/" class="project-card">⛳ Golf Website</a>
+    <a href="Quick notes app/" class="project-card">📝 Quick Notes App</a>
   </div>
 
 </body>
