--- a/Quick notes app/index.html
+++ b/Quick notes app/index.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick notes</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quick Notes</title>
+
     <link rel="stylesheet" href="style.css">
+
     <script src="script.js" defer></script>
 </head>
-<body>
+
+<body class="dark-theme">
+
     <header>
         <h1>Quick notes</h1>
-        <button class = "add-note-btn" onclick="openNoteDialog()">+ Add Note</button>
-        <button id = "themeToggleBtn" class = "theme-toggle-btn">🌙</button>
+        <button class="add-note-btn" onclick="openNoteDialog()">+ Add Note</button>
+        <button id="themeToggleBtn" class="theme-toggle-btn">🌙</button>
     </header>
 
-    <main id = "notesContainer" class="notes-grid">
+    <main id="notesContainer" class="notes-grid"></main>
 
-    </main>
-
-    <dialog id = "noteDialog">
+    <dialog id="noteDialog">
         <div class="dialog-content">
             <div class="dialog-header">
-                <h2 class="dialog-title" id = "dialogTitle">Add New Note</h2>
-                <button class="close-btn" onclick="closeNoteDialog()">x</button>
+                <h2 class="dialog-title" id="dialogTitle">Add New Note</h2>
+                <button class="close-btn" onclick="closeNoteDialog()">✕</button>
             </div>
-            <form id="noteForm">
+
+            <form id="noteForm" onsubmit="saveNote(event)">
                 <div class="form-group">
-                    <label for="noteTitle" class="form-label"></label>
-                    <input type="text" id="noteTitle" class="form-input" placeholder="Enter note title..." required>
+                    <input
+                        type="text"
+                        id="noteTitle"
+                        class="form-input"
+                        placeholder="Enter note title..."
+                        required
+                    />
                 </div>
+
                 <div class="form-group">
-                    <label for="noteContent" class ="form-label">Content</label>
-                    <textarea id="noteContent" class="form-textarea" placeholder="Write your note here..." required></textarea>
+                    <label for="noteContent" class="form-label">Content</label>
+                    <textarea
+                        id="noteContent"
+                        class="form-textarea"
+                        placeholder="Write your note here..."
+                        required
+                    ></textarea>
                 </div>
+
                 <div class="dialog-actions">
                     <button type="button" class="cancel-btn" onclick="closeNoteDialog()">Cancel</button>
                     <button type="submit" class="save-btn">Save</button>
@@ -40,5 +55,6 @@
             </form>
         </div>
     </dialog>
+
 </body>
 </html>
