feat(portfolio-hub, quick-notes): Redesign and Link Fix for Project Hub Overhaul the root index and styling to a dark, techy, minimalist theme. - Updated h1 heading to 'PROJECT / REPO' with enhanced text-shadow styling. - Implemented professional card grid for project links.
Refactored Quick Notes App:
- Fixed critical bug in quick-notes card link (path mismatch with 'Quick notes app/').
- Polished quick-notes/style.css: refined button sizing, improved header placement, and enhanced heading.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="card-description">Interactive soundboard focusing on keypress event handling, audio API integration, and dynamic CSS transitions.</p>
             <div class="card-tags">
                 <span class="tag tech-js">DOM Events</span>
-                <span class="tag tech-audio">Audio API</span>
+                <!-- <span class="tag tech-audio">Audio API</span> -->
                 <span class="tag feature-mini">Mini-Project</span>
             </div>
         </a>
