New snake game project added

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
             </div>
         </a>
 
-        <!-- PROJECT 2: drumkit -->
-        <a href="drumkit/" class="project-card">
+        <!-- PROJECT 5: snake-game -->
+        <a href="snake-game/" class="project-card">
             <div class="card-header">
-                <span class="card-icon">🥁</span>
-                <h2 class="card-title">drumkit/</h2>
+                <span class="card-icon">🐍</span>
+                <h2 class="card-title">snake-game/</h2>
             </div>
-            <p class="card-description">Interactive soundboard focusing on keypress event handling, audio API integration, and dynamic CSS transitions.</p>
+            <p class="card-description">A classic grid-based game implementing robust collision detection, speed scaling, pause functionality, and local high-score tracking.</p>
             <div class="card-tags">
-                <span class="tag tech-js">DOM Events</span>
-                <!-- <span class="tag tech-audio">Audio API</span> -->
-                <span class="tag feature-mini">Mini-Project</span>
+                <span class="tag tech-js">Game Logic</span>
+                <span class="tag tech-css">Retro UI</span>
+                <span class="tag feature-data">High Score (Local)</span>
             </div>
         </a>
-
+        
         <!-- PROJECT 3: esports-website -->
         <a href="esports-website/" class="project-card">
             <div class="card-header">
@@ -75,6 +75,20 @@
                 <span class="tag tech-css">UI Design</span>
                 <span class="tag feature-static">Static Site</span>
                 <span class="tag feature-hero">Hero Sections</span>
+            </div>
+        </a>
+
+
+        <!-- PROJECT 2: drumkit -->
+        <a href="drumkit/" class="project-card">
+            <div class="card-header">
+                <span class="card-icon">🥁</span>
+                <h2 class="card-title">drumkit/</h2>
+            </div>
+            <p class="card-description">Interactive soundboard focusing on keypress event handling, audio API integration, and dynamic CSS transitions.</p>
+            <div class="card-tags">
+                <span class="tag tech-js">DOM Events</span>
+                <span class="tag feature-mini">Mini-Project</span>
             </div>
         </a>
 
